--- a/LearnOpenGL/imgui.ini
+++ b/LearnOpenGL/imgui.ini
@@ -24,8 +24,13 @@ Size=198,71
 Collapsed=0
 
 [Window][TestMenu]
-Pos=179,326
+Pos=186,133
 Size=1480,505
+Collapsed=0
+
+[Window][TestMenue]
+Pos=60,60
+Size=134,72
 Collapsed=0
 
 [Table][0xC9935533,3]
