--- a/LearnOpenGL/LearnOpenGL.vcxproj
+++ b/LearnOpenGL/LearnOpenGL.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|x64">
@@ -58,6 +58,7 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;GLEW_STATIC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)vendor\Glew\glew-2.1.0\include;$(SolutionDir)vendor\GLFW\glfw-3.3.2.bin.WIN64\include\;$(SolutionDir)vendor\stb_image\;$(SolutionDir)vendor\glm\;src;vendor;$(ProjectDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -76,6 +77,7 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)vendor\Glew\glew-2.1.0\include;$(SolutionDir)vendor\GLFW\glfw-3.3.2.bin.WIN64\include\;$(SolutionDir)vendor\stb_image\;$(SolutionDir)vendor\glm\;src;vendor;$(ProjectDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -87,6 +89,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Tests\MandelbrotTest.cpp" />
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="Tests\CameraTest.cpp" />
@@ -109,14 +112,18 @@
     <ClCompile Include="vendor\imgui\imgui_widgets.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="res\shaders\cubeshader.fs" />
-    <None Include="res\shaders\cubeshader.vs" />
-    <None Include="res\shaders\matrices.fs" />
-    <None Include="res\shaders\matrices.vs" />
-    <None Include="res\shaders\textureshader.fs" />
-    <None Include="res\shaders\textureshader.vs" />
+    <None Include="res\shaders\cubeshader_fs.glsl" />
+    <None Include="res\shaders\cubeshader_vs.glsl" />
+    <None Include="res\shaders\mandelbrotshader_fs.glsl" />
+    <None Include="res\shaders\mandelbrotshader_vs.glsl" />
+    <None Include="res\shaders\matrices_fs.glsl" />
+    <None Include="res\shaders\matrices_vs.glsl" />
+    <None Include="res\shaders\textureshader_fs.glsl" />
+    <None Include="res\shaders\textureshader_vs.glsl" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\C++Spieleentwickler\SDLGame\src\Singleton.h" />
+    <ClInclude Include="Tests\MandelbrotTest.h" />
     <ClInclude Include="src\Application.h" />
     <ClInclude Include="src\Camera.h" />
     <ClInclude Include="Tests\CameraTest.h" />
